--- a/vue-study/style.css
+++ b/vue-study/style.css
@@ -82,6 +82,11 @@ body {
     height: 25px;
     margin-bottom: 20px;
   }
+
+    .noInput{
+      width: unset;
+      height: unset;
+    }
   
   textarea {
     width: 100%;
@@ -92,6 +97,8 @@ body {
     margin-left: 20px;
     cursor: pointer;
   }
+
+
 
   .activeTab {
     color: #16C0B0;
